objects/System__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AWS_ApiGateway_URL__c</fullName>
        <label>AWS ApiGateway URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AWS_S3_Timeout_Threshold__c</fullName>
        <defaultValue>50000</defaultValue>
        <inlineHelpText>Timeout  for Amzon s3 http call</inlineHelpText>
        <label>AWS S3 Timeout Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Async_Timeout_Threshold__c</fullName>
        <description>This time out is mainly used for Async Callout from SF</description>
        <label>Async Timeout Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This custom setting helps to disable validation rules for the integration and sys admin profiles</description>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Queue__c</fullName>
        <description>this would contain the name of email queue</description>
        <label>Email Queue</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromEmailAddress__c</fullName>
        <label>FromEmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Get_New_Work_Threshold_Email__c</fullName>
        <description>This field is created to accommodate different number of cases assigned to email queue and email 1+ queue</description>
        <label>Get New Work Threshold - Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Get_New_Work_Threshold__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Get New Work Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalEmailAddresses__c</fullName>
        <label>Internal Email Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Resend_Code_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resend Code Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Callouts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Callouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Timeout_Threshold_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Timeout Threshold Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Timeout_Threshold__c</fullName>
        <label>Override Timeout Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prevent_Email_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Outside the deployment window and until we start onboarding users, all cases created in the system through email to case must be prevented.</inlineHelpText>
        <label>Prevent Email Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeout_Threshold__c</fullName>
        <defaultValue>19999</defaultValue>
        <label>Timeout Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System</label>
</CustomObject>